src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/warnings.tessla
define f(x: Int) := default(nil[Int], x + 19)

out f(x = 23)
out 42
out 42
out 1 as a
out 2 as a

def eventCount[T](e: Events[T]) := {
    def ec: Events[Int] := default(last(ec, e) + 1, 0)
    ec
}